<resources>

    <string name="app_name">Activity3</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image1">Image 1</string>
    <string name="image2">Image 2</string>
    <string name="image3">Image 3</string>
    <string name="image4">Image 4</string>
    <string name="image5">Image 5</string>

</resources>